--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,14 @@
 @tailwind utilities;
 
 @layer base {
+  h3 {
+    @apply text-[20px] font-bold leading-10;
+  }
+
+  p {
+    @apply text-[14px];
+  }
+
   span {
     @apply text-[12px];
   }
@@ -14,12 +22,16 @@
     @apply flex flex-wrap items-center justify-center w-full;
   }
 
+  .container-title {
+    @apply w-full flex flex-col items-start px-3 py-5;
+  }
+
   .container-button {
-    @apply w-full flex items-center pad-main;
+    @apply w-full flex items-center pad-main gap-x-3;
   }
 
   .btn-base {
-    @apply flex items-center justify-center rounded-md p-3;
+    @apply flex items-center justify-center rounded-md p-3 border;
   }
 
   .btn-bfl {
@@ -31,30 +43,39 @@
   }
 
   .btn-main {
-    @apply bg-org-main text-white font-medium;
+    @apply bg-org-main text-white font-medium border-org-main;
   }
 
   .btn-sub {
-    @apply;
+    @apply bg-white text-org-main font-medium border-org-main;
   }
 
   .input-group {
-    @apply mb-3 flex flex-col;
+    @apply flex flex-col;
+  }
+
+  .input {
+    @apply border-2 rounded-[5px] p-2 text-[14px] focus:shadow-md;
   }
 
   .inputDefault {
-    @apply border-2 rounded-[5px] p-2 text-[14px] border-org-main outline-none focus:shadow-md focus:shadow-org-main;
+    @apply input border-org-main outline-none focus:shadow-org-main;
   }
 
   .inputSuccess {
-    @apply border-2 rounded-[5px] p-2 text-[14px] border-green-500 outline-none focus:shadow-md focus:shadow-green-500;
+    @apply input border-green-500 outline-none  focus:shadow-green-500;
+  }
+
+  .inputDisable {
+    @apply input border-gray outline-none focus:shadow-gray;
   }
 
   .inputError {
-    @apply border-2 rounded-[5px] p-2 text-[14px] border-red-main outline-none focus:shadow-md focus:shadow-red-main;
+    @apply input border-red-main outline-none focus:shadow-red-main;
   }
 
   .pad-main {
     @apply pt-3 px-5;
   }
+
 }
