--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,7 +31,7 @@
   }
 
   .btn-base {
-    @apply flex items-center justify-center rounded-md p-3 border;
+    @apply flex items-center justify-center rounded-md p-3;
   }
 
   .btn-bfl {
@@ -77,5 +77,4 @@
   .pad-main {
     @apply pt-3 px-5;
   }
-
 }
